--- a/web-app/src/main/resources/templates/settings.html
+++ b/web-app/src/main/resources/templates/settings.html
@@ -90,6 +90,7 @@
                 <option value="EXTERNAL_EXPENSE">Зовнішня витрата</option>
                 <option value="CLIENT_PAYMENT">Оплата клієнту</option>
                 <option value="CURRENCY_CONVERSION">Конвертація валют</option>
+                <option value="VEHICLE_EXPENSE">Витрати на машину</option>
             </select>
             <button id="create-category-btn" class="btn-primary">Створити категорію</button>
         </div>
@@ -168,6 +169,7 @@
                     <option value="EXTERNAL_EXPENSE">Зовнішня витрата</option>
                     <option value="CLIENT_PAYMENT">Оплата клієнту</option>
                     <option value="CURRENCY_CONVERSION">Конвертація валют</option>
+                    <option value="VEHICLE_EXPENSE">Витрати на машину</option>
                 </select>
             </div>
             <div class="form-group" id="category-active-group" style="display: none;">
